--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,6 +1,11 @@
 <html>
+    <head>
+    <meta charset="utf-8">
     <title>津田沼ラーメンマップ</title> 
+    </head>
     <body>
-        <a>実験用</a>
+        <div id="header">
+            <h1>津田沼ラーメンマップ</h1>
+        </div>
     </body>
 </html>
