--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,9 +1,9 @@
-<html>
+﻿<html>
     <head>
     <meta charset="utf-8">
     <title>津田沼ラーメンマップ</title> 
     </head>
-    <body>
+    <body background="img/f3f3e7.png">
         <div id="header">
             <h1>津田沼ラーメンマップ</h1>
         </div>
