--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,5 +7,9 @@
         <div id="header">
             <h1>津田沼ラーメンマップ</h1>
         </div>
+        <div align="center">
+            <img src="img/IMG_0083.jpg" width="210" height="88">
+            <br><br>
+        </div>
     </body>
 </html>
