--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -10,6 +10,7 @@
         <div align="center">
             <img src="img/IMG_0083.JPG" width="500" height="300">
             <br><br>
+            テスト画像です<br>
         </div>
     </body>
 </html>
