--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -11,7 +11,7 @@
             <img src="img/IMG_0083.JPG" width="500" height="300">
             <br><br>
             テスト画像です<br>
-            <hr width="500"><br>
+            <hr width="500">
             牡丹配置場所
             <hr width="500"><br>
         </div>
