--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -12,7 +12,7 @@
             <br><br>
             テスト画像です<br>
             <hr width="500">
-            牡丹配置場所
+            <a href="./map .html">牡丹配置</a>
             <hr width="500"><br>
         </div>
     </body>
