--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,14 +5,15 @@
     </head>
     <body background="img/f3f3e7.png">
         <div id="header">
-            <h1>津田沼ラーメンマップ</h1>
+            <h1>津田沼ラーメン紹介ページ(PM実験用)</h1>
         </div>
         <div align="center">
-            <img src="img/IMG_0083.JPG" width="500" height="300">
+            <img src="img/ra-men1.JPG" width="960" height="540">
             <br><br>
-            テスト画像です<br>
+           <h1> ↓ click！ ↓</h1>
             <hr width="500">
-            <a href="./map .html">牡丹配置</a>
+            <a href="./map.html"><img src="img/syokken1.png" width="400" height="200"></a>
+            <a href="./ramenlist.html"><img src="img/syokken2.png" width="400" height="200"></a>
             <hr width="500"><br>
         </div>
     </body>
