--- a/htdocs/map.html
+++ b/htdocs/map.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>らーめんMap</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="./mapstyle.css">
 </head>
 <body>
 	<div id="header">
 		<h1>津田沼ラーメン紹介MAP</h1>
 	</div><!-- /header -->
-	<body bgcolor="#3f3f47"></body>
-　　　<iframe src="https://www.google.com/maps/d/u/3/embed?mid=1IABa_Ffjk_BEn44fy0YY3_7YVzM0i8Jl" align=center width="90%" height="400" align=center></iframe>
+	<body bgcolor="#f3f3e7"></body>
+　　　<iframe src="https://www.google.com/maps/d/u/3/embed?mid=1IABa_Ffjk_BEn44fy0YY3_7YVzM0i8Jl" align=center width="90%" height="450" align=center></iframe>
        
 	<div id="navi">
 		<ul>
@@ -23,3 +23,5 @@
 
 </body>
 </html>
+
+
