--- a/htdocs/ramen01.html
+++ b/htdocs/ramen01.html
@@ -5,8 +5,10 @@
         <title>津田沼ラーメンマップ</title>
 </head>
 <body>
-        <div id="header"><h1 align="center">魚骨らーめん　鈴木さん　（津田沼）</h1>
-                <img src="img/IMG_0083.JPG">
+        <div id="header">
+                <div align="center"><h1>魚骨らーめん　鈴木さん　（津田沼）</h1>
+                <img src="img/IMG_0083.JPG"  width="960" height="540">
+                </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より450m</h3>
                 <h2>電話番号</h2>
