--- a/htdocs/ramen05.html
+++ b/htdocs/ramen05.html
@@ -5,8 +5,9 @@
         <title>津田沼ラーメンマップ</title>
 </head>
 <body>
-        <div id="header"><h1 align="center">九十九ラーメン　津田沼店</h1>
-                <img src="img/IMG_0083.JPG">
+        <div id="header"><div align="center"><h1>九十九ラーメン　津田沼店</h1>
+                <img src="img/IMG_0083.JPG"  width="960" height="540">
+                </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より350m</h3>
                 <h2>電話番号</h2>
