--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,6 +7,7 @@
         <div id="header">
             <h1>津田沼ラーメン紹介ページ(PM実験用)</h1>
         </div>
+        <div id="content">
         <div align="center">
             <img src="img/ra-men1.JPG" width="960" height="540">
             <br><br>
@@ -15,6 +16,7 @@
             <a href="./map.html"><img src="img/syokken1.png" width="400" height="200"></a>
             <a href="./ramenlist.html"><img src="img/syokken2.png" width="400" height="200"></a>
             <hr width="500"><br>
+        </div>
         </div>
     </body>
 </html>
