--- a/htdocs/ramen.html
+++ b/htdocs/ramen.html
@@ -2,10 +2,16 @@
 <html>
 <head>
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body>
-        <div id="header"><h1 align="center">ラーメン無限大　津田沼店</h1>
-                <img src="img / IMG_0083.JPG">
+<body bgcolor="#f3f3e7">
+        <div id="header">
+                <h1 align="center">ラーメン無限大　津田沼店</h1>
+        </div>
+        <div id="content">
+                <div align="center">
+                <img src="img/IMG_0083.JPG" width="960" height="540">
+                </div>
                 <h2>駅からの距離</h2>
                 
                 <h2>電話番号</h2>
@@ -18,5 +24,6 @@
                 <h2>定休日</h2>
                 無休
                 <br><a href="index.html">前に戻る</a></br>
+        </div>
 </body>
 </html>
