--- a/htdocs/ramen03.html
+++ b/htdocs/ramen03.html
@@ -3,11 +3,15 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
         <div id="header">
-                <div align="center"><h1>こってりらーめんなりたけ　津田沼店</h1>
-                <img src="img/IMG_0083.JPG"  width="960" height="540">
+                <h1 align="center">こってりらーめんなりたけ　津田沼店</h1>
+        </div>
+        <div id="content">
+                <div align="center">
+                        <img src="img/IMG_0083.JPG" width="960" height="540">
                 </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より350m</h3>
@@ -21,5 +25,6 @@
                 <h3>水曜日</h3>
 
                 <br><a href="ramenlist.html">ラーメンリストに戻る</a></br>
+        </div>
 </body>
 </html>
