--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,11 +1,13 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
     <head>
     <meta charset="utf-8">
     <title>津田沼ラーメンマップ</title> 
+    <link rel="stylesheet" type="text/css" href="./ra-men.css">
     </head>
-    <body background="img/f3f3e7.png">
+    <body>
         <div id="header">
-            <h1>津田沼ラーメン紹介ページ(PM実験用)</h1>
+            <h1 align="center">津田沼ラーメン紹介ページ(PM実験用)</h1>
         </div>
         <div id="content">
         <div align="center">
