--- a/htdocs/ramen02.html
+++ b/htdocs/ramen02.html
@@ -3,10 +3,14 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body>
+<body bgcolor="#f3f3e7">
         <div id="header">
-                <div align="center"><h1>九州らーめん　南木商店</h1>
+                        <h1 align="center">九州らーめん　南木商店</h1>
+                </div>
+        <div id="content">
+                <div align="center">
                 <img src="img/IMG_0083.JPG"  width="960" height="540">
                 </div>
                 <h2>駅からの距離</h2>
@@ -21,5 +25,6 @@
                 <h3>無休</h3>
 
                 <br><a href="ramenlist.html">ラーメンリストに戻る</a></br>
+        </div>
 </body>
 </html>
