--- a/htdocs/ramen04.html
+++ b/htdocs/ramen04.html
@@ -3,12 +3,16 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
         <div id="header">
-                <div align="center"><h1>らーめん処一凛</h1>
-                <img src="img/IMG_0083.JPG"  width="960" height="540">
-                </div>
+                <h1 align="center">らーめん処一凛</h1>
+        </div>
+        <div id="content">
+                        <div align="center">
+                                <img src="img/IMG_0083.JPG" width="960" height="540">
+                        </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より290m</h3>
                 <h2>電話番号</h2>
@@ -21,5 +25,6 @@
                 <h3>月曜日（祝日の場合は火曜日）</h3>
 
                 <br><a href="ramenlist.html">ラーメンリストに戻る</a></br>
+        </div>
 </body>
 </html>
