--- a/htdocs/ramen04.html
+++ b/htdocs/ramen04.html
@@ -5,14 +5,14 @@
         <title>津田沼ラーメンマップ</title>
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body>
+<body bgcolor="#f3f3e7">
         <div id="header">
                 <h1 align="center">らーめん処一凛</h1>
-        </div>
+                </div>
         <div id="content">
-                        <div align="center">
-                                <img src="img/IMG_0083.JPG" width="960" height="540">
-                        </div>
+                <div align="center">
+                <img src="img/IMG_0083.JPG" width="960" height="540">
+                </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より290m</h3>
                 <h2>電話番号</h2>
