--- a/htdocs/ramen05.html
+++ b/htdocs/ramen05.html
@@ -5,13 +5,13 @@
         <title>津田沼ラーメンマップ</title>
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body>
+<body bgcolor="#f3f3e7">
         <div id="header">
                 <h1 align="center">九十九ラーメン　津田沼店</h1>
-        </div>
+                </div>
         <div id="content">
                         <div align="center">
-                                <img src="img/IMG_0083.JPG" width="960" height="540">
+                        <img src="img/IMG_0083.JPG" width="960" height="540">
                         </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より350m</h3>
