--- a/htdocs/map.html
+++ b/htdocs/map.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="header">
-		<h1>津田沼ラーメン紹介MAP</h1>
+		<h1 align="center">津田沼ラーメン紹介MAP</h1>
 	</div><!-- /header -->
 	<body bgcolor="#f3f3e7"></body>
 　　　<iframe src="https://www.google.com/maps/d/u/3/embed?mid=1IABa_Ffjk_BEn44fy0YY3_7YVzM0i8Jl" align=center width="90%" height="450" align=center></iframe>
