--- a/htdocs/ramen08.html
+++ b/htdocs/ramen08.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div id="header"><h1 align="center">健勝軒</h1>
-                <img src="img/IMG_0083.JPG">
+                <img src="img/ramen08.JPG">
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より140m</h3>
                 <h2>電話番号</h2>
