--- a/htdocs/ramen09.html
+++ b/htdocs/ramen09.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div id="header"><h1 align="center">我馬らーめん</h1>
-                <img src="img/IMG_0083.JPG">
+                <img src="img/ramen09.JPG">
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より270m</h3>
                 <h2>電話番号</h2>
