--- a/htdocs/ramen03.html
+++ b/htdocs/ramen03.html
@@ -11,7 +11,7 @@
         </div>
         <div id="content">
                 <div align="center">
-                        <img src="img/IMG_0083.JPG" width="960" height="540">
+                        <img src="img/ramen03.JPG" width="960" height="540">
                 </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より350m</h3>
