--- a/htdocs/ramen11.html
+++ b/htdocs/ramen11.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div id="header"><h1 align="center">麺場　田所商店　津田沼店</h1>
-                <img src="img/ramen11.JPG">
+                <img src="img/ramen11.JPG" width="960" height="540">
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より210m</h3>
                 <h2>電話番号</h2>
