--- a/htdocs/ramen06.html
+++ b/htdocs/ramen06.html
@@ -11,7 +11,7 @@
                 </div>
         <div id="content">
                 <div align="center">
-                <img src="img/IMG_0083.JPG"  width="960" height="540">
+                <img src=""img/ramen06.JPG" width="960" height="540">
                 </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より300m</h3>
