--- a/htdocs/ramen10.html
+++ b/htdocs/ramen10.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div id="header"><h1 align="center">栄昇らーめん　匠</h1>
-                <img src="img/ramen10.JPG">
+                <img src="img/ramen10.JPG" width="960" height="540">
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より290m</h3>
                 <h2>電話番号</h2>
