--- a/htdocs/ramen12.html
+++ b/htdocs/ramen12.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div id="header"><h1 align="center">津田沼必勝軒</h1>
-                <img src="img/ramen12.JPG">
+                <img src="img/ramen12.JPG" width="960" height="540">
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より400m</h3>
                 <h2>電話番号</h2>
