--- a/htdocs/ramen08.html
+++ b/htdocs/ramen08.html
@@ -3,10 +3,16 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body>
-        <div id="header"><h1 align="center">健勝軒</h1>
-                <img src="img/ramen08.JPG" width="960" height="540">
+<body bgcolor="#f3f3e7">
+        <div id="header">
+                <h1 align="center">健勝軒</h1>
+                </div>
+         <div id="content">
+               <div align="center">
+               <img src="img/ramen08.JPG" width="960" height="540">
+               </div>
                 <h2>駅からの距離</h2>
                 <h3>JR津田沼駅より140m</h3>
                 <h2>電話番号</h2>
