--- a/htdocs/ramenlist.html
+++ b/htdocs/ramenlist.html
@@ -20,6 +20,6 @@
                 <h1>ばんから　フォルテ　津田沼店　<a href="ramen12.html">詳細を見る</a></h1>
                 <h1>津田沼必勝軒　<a href="ramen13.html">詳細を見る</a></h1>
 
-                <br><a href="index.html">前に戻る</a></br>
+                <br><a href="index.html">ラーメン紹介ページへ戻る</a></br>
 </body>
 </html>
