--- a/htdocs/ramen01.html
+++ b/htdocs/ramen01.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#f3f3e7">
         <div id="header">
-                <h1 align="center">魚骨らーめん　鈴木さん　（津田沼）</h1>
+                        <h1 align="center">魚骨らーめん　鈴木さん　津田沼</h1>
                 </div>
         <div id="content">
                 <div align="center">
