--- a/htdocs/ramen01.html
+++ b/htdocs/ramen01.html
@@ -14,17 +14,17 @@
                 <img src="img/ramen01.JPG" width="960" height="540">
                 </div>
                 <h1>　　　駅からの距離</h1>
-                　<h2>　　　　JR津田沼駅より450m</h2>
+                <h2>　　　　　JR津田沼駅より450m</h2>
                 <h1>　　　電話番号</h1>
-                　<h2>　　　　047-478-1175</h2>
+                <h2>　　　　　047-478-1175</h2>
                 <h1>　　　場所</h1>
-                　<h2>　　　　〒274-0825　千葉県船橋市前原西2-32-10</h2>  
+                <h2>　　　　　〒274-0825　千葉県船橋市前原西2-32-10</h2>  
                 <h1>　　　営業時間</h1>
-                　<h2>　　　　11:30~26:00</h2>
+                <h2>　　　　　11:30~26:00</h2>
                 <h1>　　　定休日</h1>
-                　<h2>　　　　不定休</h2>
+                <h2>　　　　　不定休</h2>
 
-                <br><a href="ramenlist.html">　　　　ラーメンリストに戻る</a></br>
+                <br>　　　　・<a href="ramenlist.html">ラーメンリスト</a></br>
         </div>
 </body>
 </html>
