--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" type="text/css" href="./ra-men.css">
     </head>
     <body>
-        <div id="header">
-            <h1 align="center">津田沼ラーメン紹介ページ(PM実験用)</h1>
+        <div class="titlebar">
+                <p class="button">
+                    <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+                    <h1 class="header">　　　　　　　　　津田沼ラーメン紹介ページ(PM実験用)</h1>
+            </div>
         </div>
         <div id="content">
         <div align="center">
-            <img src="img/ra-men1.JPG" width="960" height="540">
+            <img src="img/ra-men1.JPG"  width="960" height="540">
             <br><br>
            <h1> ↓ click！ ↓</h1>
             <hr width="500">
