--- a/htdocs/ramen.html
+++ b/htdocs/ramen.html
@@ -2,9 +2,8 @@
 <html>
 <head>
         <title>津田沼ラーメンマップ</title>
-        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body bgcolor="#f3f3e7">
+<body>
         <div id="header">
                 <h1 align="center">ラーメン無限大　津田沼店</h1>
         </div>
