--- a/htdocs/ramen01.html
+++ b/htdocs/ramen01.html
@@ -5,7 +5,7 @@
         <title>津田沼ラーメンマップ</title>
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body bgcolor="#f3f3e7">
+<body>
         <div id="header">
                 <h1 align="center">魚骨らーめん　鈴木さん　（津田沼）</h1>
                 </div>
