--- a/htdocs/index2.html
+++ b/htdocs/index2.html
@@ -8,7 +8,7 @@
     <body>
             <div class="titlebar">
                     <p class="button">
-                        <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+                        <a href="./index.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
                         <h1 class="header">　　　　　　Tsudanuma Ramen Introductionpage(PM実験用)</h1>
                 </div>
         <div id="content">
