--- a/htdocs/map.html
+++ b/htdocs/map.html
@@ -4,19 +4,20 @@
 	<meta charset="utf-8">
 	<title>らーめんMap</title>
 	<link rel="stylesheet" type="text/css" href="./mapstyle.css">
+	<link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
 	<div id="header">
 		<h1 align="center">津田沼ラーメン紹介MAP</h1>
 	</div><!-- /header -->
-	<body bgcolor="#f3f3e7"></body>
+	
 　　　<iframe src="https://www.google.com/maps/d/u/3/embed?mid=1IABa_Ffjk_BEn44fy0YY3_7YVzM0i8Jl" align=center width="90%" height="450" align=center></iframe>
        
 	<div id="navi">
 		<ul>
 		<li><a href="./index.html">トップページ</a></li>
 		<li><a href="./map.html">津田沼ラーメン紹介MAP</a></li>
-		<li><a href="./map.html">津田沼ラーメン紹介リスト</a></li>
+		<li><a href="./ramenlist.html">津田沼ラーメン紹介リスト</a></li>
 		</ul>
 	</div><!-- /navi -->
 
