--- a/htdocs/ramen13.html
+++ b/htdocs/ramen13.html
@@ -3,10 +3,16 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
-        <div id="header"><h1 align="center">津田沼 必勝軒</h1>
+        <div id="header">
+                <h1 align="center">津田沼 必勝軒</h1>
+                </div>
+        <div id="content">
+                <div align="center">
                 <img src="img/ramen13.JPG" width="960" height="540">
+                </div>
                 <h1>駅からの距離</h1>
                 <h2>JR津田沼駅より400m</h2>
                 <h1>電話番号</h1>
