--- a/htdocs/ramenlist.html
+++ b/htdocs/ramenlist.html
@@ -3,23 +3,27 @@
 <head>
 <meta charset="utf-8">
         <title>津田沼ラーメンマップ</title>
+        <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
-        <div id="header"><h1 align="center">津田沼ラーメンリスト</h1>
-                <h1>　　　　魚骨らーめん　鈴木さん　津田沼　　<a href="ramen01.html">詳細を見る</a></h1>
-                <h1>　　　　九州らーめん　南木商店　　　　　　<a href="ramen02.html">詳細を見る</a></h1>
-                <h1>　　　　なりたけ　津田沼店　　　　　　　　<a href="ramen03.html">詳細を見る</a></h1>
-                <h1>　　　　らーめん処一凛　　　　　　　　　　<a href="ramen04.html">詳細を見る</a></h1>
-                <h1>　　　　九十九ラーメン　津田沼店　　　　　<a href="ramen05.html">詳細を見る</a></h1>
-                <h1>　　　　ラーメン無限大　津田沼店　　　　　<a href="ramen06.html">詳細を見る</a></h1>
-                <h1>　　　　裏　我馬らーめん　　　　　　　　　<a href="ramen07.html">詳細を見る</a></h1>
-                <h1>　　　　健勝軒　　　　　　　　　　　　　　<a href="ramen08.html">詳細を見る</a></h1>
-                <h1>　　　　表　我馬らーめん　　　　　　　　　<a href="ramen09.html">詳細を見る</a></h1>
-                <h1>　　　　栄昇らーめん　　　　　　　　　　　<a href="ramen10.html">詳細を見る</a></h1>
-                <h1>　　　　麺場　田所商店　津田沼店　　　　　<a href="ramen11.html">詳細を見る</a></h1>
-                <h1>　　　　ばんから　フォルテ　津田沼店　　　<a href="ramen12.html">詳細を見る</a></h1>
-                <h1>　　　　津田沼必勝軒　　　　　　　　　　　<a href="ramen13.html">詳細を見る</a></h1>
-
+        <div id="header">
+                <h1 align="center">津田沼ラーメンリスト</h1>
+                </div>
+                <div align="center">
+                <h1>　　魚骨らーめん　鈴木さん　津田沼　　<a href="ramen01.html">詳細を見る</a></h1>
+                <h1>　　九州らーめん　南木商店　　　　　　<a href="ramen02.html">詳細を見る</a></h1>
+                <h1>　　なりたけ　津田沼店　　　　　　　　<a href="ramen03.html">詳細を見る</a></h1>
+                <h1>　　らーめん処一凛　　　　　　　　　　<a href="ramen04.html">詳細を見る</a></h1>
+                <h1>　　九十九ラーメン　津田沼店　　　　　<a href="ramen05.html">詳細を見る</a></h1>
+                <h1>　　ラーメン無限大　津田沼店　　　　　<a href="ramen06.html">詳細を見る</a></h1>
+                <h1>　　裏　我馬らーめん　　　　　　　　　<a href="ramen07.html">詳細を見る</a></h1>
+                <h1>　　健勝軒　　　　　　　　　　　　　　<a href="ramen08.html">詳細を見る</a></h1>
+                <h1>　　表　我馬らーめん　　　　　　　　　<a href="ramen09.html">詳細を見る</a></h1>
+                <h1>　　栄昇らーめん　　　　　　　　　　　<a href="ramen10.html">詳細を見る</a></h1>
+                <h1>　　麺場　田所商店　津田沼店　　　　　<a href="ramen11.html">詳細を見る</a></h1>
+                <h1>　　ばんから　フォルテ　津田沼店　　　<a href="ramen12.html">詳細を見る</a></h1>
+                <h1>　　津田沼必勝軒　　　　　　　　　　　<a href="ramen13.html">詳細を見る</a></h1>
+                </div>
                 <br>　　　　・<a href="index.html">ラーメン紹介ページ</a></br>
 </body>
 </html>
