--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,8 +18,8 @@
             <br><br>
            <h1> ↓ click！ ↓</h1>
             <hr width="500">
-            <a href="./map.html"><img src="img/syokken1.png" width="400" height="200"></a>
-            <a href="./ramenlist.html"><img src="img/syokken2.png" width="400" height="200"></a>
+            <a href="./map.html"><img src="img/syokken.png" width="400" height="200"></a>
+            <a href="./ramenlist.html"><img src="img/syokkenn.png" width="400" height="200"></a>
             <hr width="500"><br>
         </div>
         </div>
