--- a/htdocs/map.html
+++ b/htdocs/map.html
@@ -7,8 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
-	<div id="header">
-		<h1 align="center">津田沼ラーメン紹介MAP</h1>
+		<div class="titlebar">
+                <p class="button">
+                    <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+			<h1 class="header">　　　　　　　　　津田沼ラーメン紹介MAP</h1>
 	</div><!-- /header -->
 	
 　　　<iframe src="https://www.google.com/maps/d/u/3/embed?mid=1IABa_Ffjk_BEn44fy0YY3_7YVzM0i8Jl" align=center width="90%" height="450" align=center></iframe>
