--- a/htdocs/ramenlist.html
+++ b/htdocs/ramenlist.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
-        <div id="header">
-                <h1 align="center">津田沼ラーメンリスト</h1>
+                <div class="titlebar">
+                                <p class="button">
+                                    <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+                                <h1 class="header">津田沼ラーメンリスト</h1>
                 </div>
                 <div align="center">
                 <h1>　　魚骨らーめん　鈴木さん　津田沼　　<a href="ramen01.html">詳細を見る</a></h1>
