--- a/htdocs/ramen01.html
+++ b/htdocs/ramen01.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
 <body>
-        <div id="header">
-                        <h1 align="center">魚骨らーめん　鈴木さん　津田沼</h1>
+                <div class="titlebar">
+                        <p class="button">
+                            <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+                        <h1 class="header">　　　　　　　　　魚骨らーめん　鈴木さん　津田沼</h1>
                 </div>
         <div id="content">
                 <div align="center">
