--- a/htdocs/ramen06.html
+++ b/htdocs/ramen06.html
@@ -5,9 +5,11 @@
         <title>津田沼ラーメンマップ</title>
         <link rel="stylesheet" type="text/css" href="./ra-men.css">
 </head>
-<body bgcolor="#f3f3e7">
-        <div id="header">
-                <h1 align="center">ラーメン無限大　津田沼店</h1>
+<body>
+                <div class="titlebar">
+                        <p class="button">
+                            <a href="./index2.html"><img src="img/english.png" width="150" height="75" align="left"></p></a>
+                        <h1 class="header">　　　　　　　　ラーメン無限大　津田沼店</h1>
                 </div>
         <div id="content">
                 <div align="center">
